--- a/tutorial/Grounding_DINO_explanation.ipynb
+++ b/tutorial/Grounding_DINO_explanation.ipynb
@@ -161,11 +161,11 @@
    "outputs": [],
    "source": [
     "# input\n",
-    "image_path = \"example/tank.png\"\n",
+    "image_path = \"datasets/coco/val2017/000000090003.jpg\"\n",
     "image = cv2.imread(image_path)\n",
-    "target_box = [42, 115, 503, 251]\n",
-    "target_class = 7\n",
-    "TEXT_PROMPT = \"chair . person . dog . tank .\"\n",
+    "target_box = [219,213,493,365]\n",
+    "target_class = 33\n",
+    "TEXT_PROMPT = \"person . bicycle . car . motorcycle . airplane . bus . train . truck . boat . traffic light . fire hydrant . stop sign . parking meter . bench . bird . cat . dog . horse . sheep . cow . elephant . bear . zebra . giraffe . backpack . umbrella . handbag . tie . suitcase . frisbee . skis . snowboard . sports ball . kite . baseball bat . baseball glove . skateboard . surfboard . tennis racket . bottle . wine glass . cup . fork . knife . spoon . bowl . banana . apple . sandwich . orange . broccoli . carrot . hot dog . pizza . donut . cake . chair . couch . potted plant . bed . dining table . toilet . tv . laptop . mouse . remote . keyboard . cell phone . microwave . oven . toaster . sink . refrigerator . book . clock . vase . scissors . teddy bear . hair drier . toothbrush .\"\n",
     "divison_number = 60"
    ]
   },
